# Cpp-TP1

./: CMakeLists.txt  README.md  main.cpp  main.hpp
src/: inputs.cpp  inputs.hpp  menu.cpp  menu.hpp  utils.cpp  utils.hpp
src/exercices/: ex1.cpp  ex1.hpp  ex2.cpp  ex2.hpp  ex3.cpp  ex3.hpp  ex4.cpp  ex4.hpp  ex5.cpp  ex5.hpp
